--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,16 @@
             <version>1.2.28</version>
         </dependency>
         <!--        分页-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.junit</groupId>
+            <artifactId>com.springsource.org.junit</artifactId>
+            <version>4.7.0</version>
+        </dependency>
     </dependencies>
 
     <build>
