--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,21 @@ spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
 #配置mapper xml文件的路径
 mybatis-plus.mapper-locations=classpath:/mapping/*.xml
+
+
+
+
+spring.mail.host=smtp.163.com
+spring.mail.username=pahirdinyasin@163.com
+spring.mail.password=DDVEQYUXINMUCNFK
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+# SSL Config
+spring.mail.port=465
+spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
